# resto_bar_Heaven-django-

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
resto/: admin.py  forms.py  models.py  urls.py  views.py
resto/migrations/: 0001_initial.py  0002_alter_reservation_user_feedback.py  0003_remove_reservation_unique_reservation_and_more.py  0004_alter_reservation_customer_name_and_more.py  0005_reservation_quantity_customers.py  0006_table_image.py  0007_alter_reservation_customer_name_and_more.py  0008_menu_poster.py
resto/templates/: about.html  base.html  feedback.html  home.html  menu.html  poster.html  reservation-confirm.html  reservation.html  reservation_confirm_delete.html  reservation_form.html
resto/templates/includes/: feedback-button.html  footer.html  inc_menu.html
static/css/: right-nav-style.css  style.css  stylesheet.css
static/js/: script.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html  personal_account.html  user-form.html
